Sat Dec 26 18:21:17 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/post-commit.sh: copied from svn server.

Sat Dec 26 11:26:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* miniinit.c (Init_enc): add some common aliases of built-in
	  encodings.  [ruby-core:72481] [Bug #11872]

Sat Dec 26 01:24:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, version.h (RUBY_PROGRAM_VERSION): extract version
	  numbers from API version in include/ruby/version.h except for
	  TEENY, to save matz job next year.

	* win32/setup.mak (-version-): use program version.

Fri Dec 25 22:43:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: extract RUBY_RELEASE_DAY at generating Makefile.

	* version.h (RUBY_RELEASE_DATE): construct from RUBY_RELEASE_YEAR,
	  RUBY_RELEASE_MONTH, and RUBY_RELEASE_DAY.

Fri Dec 25 21:33:06 2015  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* version.h (RUBY_VERSION): 2.4.0 development has started.

Fri Dec 25 14:12:12 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* doc/ChangeLog-2.3.0, ext/tk/lib/tkextlib/SUPPORT_STATUS,
	  include/ruby/version.h: minor grammar fixes [ci skip]

Fri Dec 25 08:23:22 2015  Tadashi Saito  <tadashi_saito@dwango.co.jp>

	* compile.c, cont.c, doc, man: fix common misspelling.
	  [ruby-core:72466] [Bug #11870]


For the changes before 2.3.0, see doc/ChangeLog-2.3.0
For the changes before 2.2.0, see doc/ChangeLog-2.2.0
For the changes before 2.1.0, see doc/ChangeLog-2.1.0
For the changes before 2.0.0, see doc/ChangeLog-2.0.0
For the changes before 1.9.3, see doc/ChangeLog-1.9.3
For the changes before 1.8.0, see doc/ChangeLog-1.8.0

Local variables:
coding: us-ascii
add-log-time-format: (lambda ()
  (let* ((time (current-time))
	 (system-time-locale "C")
	 (diff (+ (cadr time) 32400))
	 (lo (% diff 65536))
	 (hi (+ (car time) (/ diff 65536))))
  (format-time-string "%a %b %e %H:%M:%S %Y" (list hi lo) t)))
indent-tabs-mode: t
tab-width: 8
change-log-indent-text: 2
end:
vim: tabstop=8 shiftwidth=2